; ModuleID = '/home/carl/AnghaBench/linux/arch/um/drivers/extr_virtio_uml.c_vhost_user_send_u64.c'
source_filename = "/home/carl/AnghaBench/linux/arch/um/drivers/extr_virtio_uml.c_vhost_user_send_u64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.virtio_uml_device = type { i32 }
%struct.vhost_user_msg = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.virtio_uml_device*, i32, i32)* @vhost_user_send_u64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vhost_user_send_u64(%struct.virtio_uml_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.virtio_uml_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.vhost_user_msg, align 4
  store %struct.virtio_uml_device* %0, %struct.virtio_uml_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = getelementptr inbounds %struct.vhost_user_msg, %struct.vhost_user_msg* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32, i32* %6, align 4
  store i32 %10, i32* %9, align 4
  %11 = getelementptr inbounds %struct.vhost_user_msg, %struct.vhost_user_msg* %7, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i32 4, i32* %12, align 4
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  %14 = load i32, i32* %5, align 4
  store i32 %14, i32* %13, align 4
  %15 = load %struct.virtio_uml_device*, %struct.virtio_uml_device** %4, align 8
  %16 = call i32 @vhost_user_send(%struct.virtio_uml_device* %15, i32 0, %struct.vhost_user_msg* %7, i32* null, i32 0)
  ret i32 %16
}

declare dso_local i32 @vhost_user_send(%struct.virtio_uml_device*, i32, %struct.vhost_user_msg*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
